Try to fix the toggles